tests/parser/bad/stmts_t-match-with.scilla
scilla_version 0

library TestLib

let a = True

contract Test
()

(* missing identifer*)
transition arbitrary ()
  match with
  | _ => accept
  end
end
